Fix: import font from html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     <meta name="twitter:card" content="https://automate-me.co/img/twitter-img.png">
     <!-- end of meta tags for social media -->
 
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;0,700;1,300&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/site.css">
   </head>
   <body class="bg-pink-light">
