--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
     <!-- meta tags for social media -->
     <meta property="og:title" content="Libérez votre entreprise des tâches répétitives.">
     <meta property="og:description" content="On automatise ces tâches pour vous. Demandez votre audit gratuit pour rendre votre entreprise + efficace !">
-    <meta property="og:image" content="https://automate-me.co/img/facebook-img.png">
+    <meta property="og:image" content="https://automate-me.co/assets/img/facebook-img.png">
     <meta property="og:url" content="https://automate-me.co/">
-    <meta name="twitter:card" content="https://automate-me.co/img/twitter-img.png">
+    <meta name="twitter:card" content="https://automate-me.co/assets/img/twitter-img.png">
     <!-- end of meta tags for social media -->
 
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;0,700;1,300&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
