--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,26 @@
     <meta name="twitter:card" content="https://automate-me.co/assets/img/twitter-img.jpg">
     <!-- end of meta tags for social media -->
 
+    <!-- Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window,document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+       fbq('init', '317733572715655');
+      fbq('track', 'PageView');
+      </script>
+      <noscript>
+       <img height="1" width="1"
+      src="https://www.facebook.com/tr?id=317733572715655&ev=PageView
+      &noscript=1"/>
+    </noscript>
+<!-- End Facebook Pixel Code -->
+
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;0,700;1,300&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/site.css">
   </head>
