--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="https://automate-me.co/assets/img/twitter-img.jpg">
     <!-- end of meta tags for social media -->
+    
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- Facebook Pixel Code -->
     <script>
