--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,10 @@ for(h=0;h<l.length;h++)c(e,l[h]);var f="set set_once union unset remove delete".
 MIXPANEL_CUSTOM_LIB_URL:"file:"===c.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";d=c.getElementsByTagName("script")[0];d.parentNode.insertBefore(b,d)}})(document,window.mixpanel||[]);
 mixpanel.init("0cdf98c6035bd5b4a79998b32b1b08c6", {"api_host": "https://api-eu.mixpanel.com", batch_requests: true})</script>
     <!-- End Mixpanel Code -->
+    
+    <!-- Memberstack Code -->
+<script src="https://api.memberstack.io/static/memberstack.js?custom" data-memberstack-id="4670a524d2f6c52ade669a7aa105076c"> </script> 
+    <!-- End Memberstack Code -->
 
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;0,700;1,300&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/site.css">
